--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@tailwind base ;
+
+@tailwind components ;
+
+@tailwind utilities ;
+
+body {
+  background-color: black;
+}
